@startuml

title Description du domaine fonctionnel simple\n

/' = = = = = = = STYLE = = = = = = = '/
skinparam monochrome true
skinparam linetype ortho

/' = = = = = = = CLASSE = = = = = = = '/
class address
class client
class composition
class employee
class ingredient
class line_order
class order
class payment_history
class payment_solution
class phone
class pizza
class restaurant
class stock

/' = = = = = = = RELATION = = = = = = = '/
address "1" -- "1" restaurant
address "1" -- "*" employee
client "1..*" - "1..*" phone
client "1..*" -- "1..*" address
employee "1" - "*" order
employee "*" -- "1" restaurant
ingredient "1..*" - "1..*" restaurant
(ingredient, restaurant) .. stock
line_order "*" - "1" order
order "*" - "1" client
order "1" -- "*" payment_history
payment_solution "1" -up- "*" payment_history
phone "1..*" -- "1..*" employee
pizza "1..*" - "1..*" ingredient
(pizza, ingredient) .. composition

@enduml
